--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # Whitelist folder/a/b1/ and folder/a/b2/
 # trailing "/" is optional for folders, may match file though.
 # "/" is NOT optional when followed by a *
+!.oh-my-zsh/
+!.oh-my-zsh/*
 !.config/
 .config/*
 !.config/qtile/
@@ -20,6 +22,7 @@
 !.config/alacritty/*
 !.config/picom/
 !.config/picom/*
+!.zshrc
 # !folder/a/b1/
 # !folder/a/b2/
 # !folder/a/file.txt
