--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # "/" is NOT optional when followed by a *
 !.oh-my-zsh/
 !.oh-my-zsh/*
+.oh-my-zsh/.github/
 !.config/
 .config/*
 !.config/qtile/
@@ -23,6 +24,12 @@
 !.config/picom/
 !.config/picom/*
 !.zshrc
+!.local/
+.local/*
+!.local/share/
+.local/share/*
+!.local/share/wallpapers/
+!.local/share/wallpapers/*
 # !folder/a/b1/
 # !folder/a/b2/
 # !folder/a/file.txt
