--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@
 !.config/gtk-3.0/*
 !.config/lxsession/
 !.config/lxsession/*
+!.config/spotifyd/
+!.config/spotifyd/*
+!.config/dunst/
+!.config/dunst/*
 !.zshrc
 !.gtkrc-2.0
 !.local/
