Fix topbar sizes

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -21,7 +21,6 @@ rounded-corners-exclude = [
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  "class_g = 'qtile'",
   "class_g = 'kitty'",
   # "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
@@ -29,8 +28,10 @@ rounded-corners-exclude = [
   #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
   "class_g = 'Thunderbird'",
-  # "class_g = 'xmenu'",
   # "x = 0 && y = 0 && override_redirect = true",
+  # "window_type = 'dock'",
+  # "window_type = 'desktop'"
+  # "class_g = 'xmenu'",
   # "class_g = 'qtile'"
 ];
 round-borders = 1;
