Fix drag window glitch

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,11 +3,11 @@
 #################################
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-transition-length = 100
-transition-pow-x = 0.2
-transition-pow-y = 0.2
-transition-pow-w = 0.2
-transition-pow-h = 0.2
+transition-length = 300
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
 size-transition = true
 
 
@@ -15,24 +15,13 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 9.5;
 rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'kitty'",
-  # "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'",
-  # "x = 0 && y = 0 && override_redirect = true",
-  # "window_type = 'dock'",
-  # "window_type = 'desktop'"
-  # "class_g = 'xmenu'",
-  # "class_g = 'qtile'"
+  # "window_type = 'normal'",
+  "class_g = 'rdesktop'",
+  "class_g = 'Google-chrome'",
+  "class_g = 'Mailspring'",
+  "class_g = 'Microsoft Teams - Preview'"
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -49,7 +38,7 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -69,7 +58,7 @@ shadow-offset-y = -7;
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-no-dock-shadow = false
+# no-dock-shadow = false
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -142,12 +131,13 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
 fade-exclude = [
-  "class_g = 'slop'"   # maim
+  "class_g = 'slop'",   # maim
+  "class_g = 'Xmenu'"
 ]
 
 # Do not fade on window open/close.
@@ -217,9 +207,6 @@ opacity-rule = [
   "100:class_g    = 'Alacritty'",
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'Code'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
   "100:class_g    = 'Google-chrome'",
   "100:class_g    = 'Mailspring'"
 ];
@@ -263,7 +250,7 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
+  method = "kawase";
   #method = "kernel";
   strength = 7;
   # deviation = 1.0;
@@ -300,7 +287,7 @@ blur-background-exclude = [
 #
 experimental-backends = true;
 backend = "glx";
-#backend = "xrender";
+# backend = "xrender";
 
 
 # Enable/disable VSync.
@@ -508,7 +495,7 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = false; shadow = false; }
+  normal = { fade = true; shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
