Add fav pywal support

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -206,6 +206,7 @@ opacity-rule = [
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
   "80:class_g     = 'Polybar'",
+  "70:class_g     = 'Shutdown-dialog'",
   "100:class_g    = 'Code'",
   "100:class_g    = 'Google-chrome'",
   "100:class_g    = 'Mailspring'"
