Exclude qtile bar round border

--- a/.config/galendae/galendae.conf
+++ b/.config/galendae/galendae.conf
@@ -20,13 +20,13 @@ y_offset=38
 ### COLORS
 
 # Window background specified with CSS color
-background_color=#222222
+background_color=#2F343F
 # Text color specified with CSS color
-foreground_color=#dfdfdf
+foreground_color=#ffffff
 # Dates of previous and following months, colored with CSS
-fringe_date_color=#404040
+fringe_date_color=#c0c5ce
 # Highlight color for the current date
-highlight_color=#c61740
+highlight_color=#9BDD22
 
 ### FONTS
 
