--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -21,11 +21,13 @@ rounded-corners-exclude = [
   "class_g = 'rdesktop'",
   "class_g = 'Google-chrome'",
   "class_g = 'Mailspring'",
+  "QTILE_INTERNAL@:c",
+  # "class_g = 'Dunst'",
   "class_g = 'Microsoft Teams - Preview'"
 ];
 round-borders = 1;
 round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
+  # "class_g = 'Dunst'",
 ];
 
 #################################
@@ -38,7 +40,7 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = false;
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -208,6 +210,7 @@ opacity-rule = [
   "80:class_g     = 'Polybar'",
   "70:class_g     = 'Shutdown-dialog'",
   "100:class_g    = 'Code'",
+  "80:class_g     = 'Galendae'",
   "100:class_g    = 'Google-chrome'",
   "100:class_g    = 'Mailspring'"
 ];
