--- a/.config/spotifyd/spotifyd.conf
+++ b/.config/spotifyd/spotifyd.conf
@@ -13,4 +13,4 @@ bitrate = 320
 cache_path = "/home/alejandro.garuda/.cache/spotifyd"
 volume-normalisation = true
 normalisation-pregain = -10
-
+initial_volume = "80"
