--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -9,7 +9,9 @@ transition-pow-y = 0.1
 transition-pow-w = 0.1
 transition-pow-h = 0.1
 size-transition = true
-
+# transition-exclude = [
+#   "class_g = 'Nwgbar'"
+# ]
 
 #################################
 #             Corners           #
@@ -23,6 +25,8 @@ rounded-corners-exclude = [
   "class_g = 'Mailspring'",
   "QTILE_INTERNAL@:c",
   # "class_g = 'Dunst'",
+  "class_g = 'Bar'",
+  "class_g = 'bar'",
   "class_g = 'Microsoft Teams - Preview'"
 ];
 round-borders = 1;
