--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -271,7 +271,7 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  #"window_type = 'dock'",
+  "window_type = 'dock'",
   #"window_type = 'desktop'",
   #"class_g = 'URxvt'",
   #
@@ -279,6 +279,7 @@ blur-background-exclude = [
   # when taking selection screenshot with `main`
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
+  "class_g = 'Conky'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
