--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Sweet-Dark
 gtk-icon-theme-name=BeautyLine
-gtk-font-name=MesloLGSDZ Nerd Font 11
+gtk-font-name=Noto Sans 12
 gtk-cursor-theme-name=Sweet-cursors
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
