--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -258,9 +258,9 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  method = "dual_kawase";
   #method = "kernel";
-  strength = 7;
+  strength = 5;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
