--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -260,7 +260,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "dual_kawase";
   #method = "kernel";
-  strength = 5;
+  strength = 10;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -272,7 +272,7 @@ blur: {
 # Exclude conditions for background blur.
 blur-background-exclude = [
   "window_type = 'dock'",
-  #"window_type = 'desktop'",
+  "window_type = 'desktop'",
   #"class_g = 'URxvt'",
   #
   # prevents picom from blurring the background
