--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,4 +1,5 @@
 [Settings]
+gtk-application-prefer-dark-theme=1
 gtk-theme-name=Sweet-Dark
 gtk-icon-theme-name=BeautyLine
 gtk-font-name=Noto Sans 12
