--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,5 +9,6 @@
             "viewType": "jupyter.notebook.ipynb",
             "filenamePattern": "*.ipynb"
         }
-    ]
+    ],
+    "git.confirmSync": false
 }
