Fix cache_path spotifyd

--- a/.config/spotifyd/spotifyd.conf
+++ b/.config/spotifyd/spotifyd.conf
@@ -10,7 +10,7 @@ mixer = "PCM"
 device_name = "SPT"
 device_type = "computer"
 bitrate = 320
-cache_path = "/home/alejandro.garuda/.cache/spotifyd"
+cache_path = ".cache/spotifyd"
 volume-normalisation = true
 normalisation-pregain = -10
 initial_volume = "80"
