Fix spotifyd pass

--- a/.config/spotifyd/spotifyd.conf
+++ b/.config/spotifyd/spotifyd.conf
@@ -1,6 +1,6 @@
 [global]
 username = "zabapuen"
-password = "P@ssw0rd"
+password = "<pass>"
 backend = "pulseaudio"
 use_mpris = true
 #device = "default"
