Fix color scheme

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -17,7 +17,7 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 9.5;
+corner-radius = 10;
 rounded-corners-exclude = [
   # "window_type = 'normal'",
   "class_g = 'rdesktop'",
@@ -48,18 +48,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 35;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -20;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -20;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -104,6 +104,7 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
+  "QTILE_INTERNAL@:c",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -160,7 +161,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 0.1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -204,20 +205,21 @@ focus-exclude = [
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = [
-  "80:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
-  "70:class_g     = 'Shutdown-dialog'",
-  "100:class_g    = 'Code'",
-  "80:class_g     = 'Galendae'",
-  "100:class_g    = 'Google-chrome'",
-  "100:class_g    = 'Mailspring'"
-];
+# # opacity-rule = [
+# #   "100:class_g    = 'slop'",            # maim
+# #   "100:class_g    = 'XTerm'",
+# #   "100:class_g    = 'URxvt'",
+# #   "100:class_g    = 'kitty'",
+# #   "100:class_g    = 'Alacritty'",
+# #   "100:class_g    = 'Google-chrome'",
+# #   "100:class_g    = 'Mailspring'",
+# #   "100:class_g    = 'Code'",
+# #   "80:class_g     = 'Bar'",             # lemonbar
+# #   "80:class_g     = 'Polybar'",
+# #   "80:class_g     = 'Galendae'",
+# #   "80:class_g     = 'jgmenu'",
+# #   "70:class_g     = 'Shutdown-dialog'"
+# # ];
 
 
 #################################
