--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -276,7 +276,7 @@ draw_bold_text_with_bright_colors: true
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.75
+background_opacity: 0.55
 
 selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
@@ -606,7 +606,7 @@ key_bindings:
 colors:
   # Default colors
   primary:
-    background: '#292C3E'
+    background: '#0a1124'
     foreground: '#EBEBEB'
 
   # Cursor colors
