--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -24,15 +24,16 @@ rounded-corners-exclude = [
   "class_g = 'Google-chrome'",
   "class_g = 'Mailspring'",
   "QTILE_INTERNAL@:c",
-  # "class_g = 'Dunst'",
   "class_g = 'Bar'",
   "class_g = 'bar'",
+  "class_g = 'Xephyr'",
+  "window_type = 'dock'",
   "class_g = 'Microsoft Teams - Preview'"
 ];
-round-borders = 1;
-round-borders-exclude = [
-  # "class_g = 'Dunst'",
-];
+# # round-borders = 1;
+# # round-borders-exclude = [
+# #   # "class_g = 'Dunst'",
+# # ];
 
 #################################
 #             Shadows           #
@@ -98,13 +99,13 @@ shadow-offset-y = -20;
 #
 # shadow-exclude = []
 shadow-exclude = [
+  "window_type = 'dock'",
   "name = 'Notification'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
-  "QTILE_INTERNAL@:c",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -190,6 +191,7 @@ active-opacity = 1.0;
 # focus-exclude = []
 focus-exclude = [
   "class_g = 'Cairo-clock'",
+  "window_type = 'dock'",
   "class_g = 'Bar'",                    # lemonbar
   "class_g = 'slop'"                    # maim
 ];
@@ -205,21 +207,21 @@ focus-exclude = [
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-# # opacity-rule = [
-# #   "100:class_g    = 'slop'",            # maim
-# #   "100:class_g    = 'XTerm'",
-# #   "100:class_g    = 'URxvt'",
-# #   "100:class_g    = 'kitty'",
-# #   "100:class_g    = 'Alacritty'",
-# #   "100:class_g    = 'Google-chrome'",
-# #   "100:class_g    = 'Mailspring'",
-# #   "100:class_g    = 'Code'",
-# #   "80:class_g     = 'Bar'",             # lemonbar
-# #   "80:class_g     = 'Polybar'",
-# #   "80:class_g     = 'Galendae'",
-# #   "80:class_g     = 'jgmenu'",
-# #   "70:class_g     = 'Shutdown-dialog'"
-# # ];
+opacity-rule = [
+  "100:class_g    = 'slop'",            # maim
+  "100:class_g    = 'XTerm'",
+  "100:class_g    = 'URxvt'",
+  "100:class_g    = 'Alacritty'",
+  "100:class_g    = 'Google-chrome'",
+  "100:class_g    = 'Mailspring'",
+  "100:class_g    = 'Code'",
+  "80:class_g     = 'Bar'",             # lemonbar
+  "100:window_type = 'dock'",
+  "80:class_g     = 'Polybar'",
+  "80:class_g     = 'Galendae'",
+  "80:class_g     = 'jgmenu'",
+  "70:class_g     = 'Shutdown-dialog'"
+];
 
 
 #################################
@@ -273,7 +275,6 @@ blur: {
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
-  "window_type = 'dock'",
   "window_type = 'desktop'",
   #"class_g = 'URxvt'",
   #
@@ -282,6 +283,8 @@ blur-background-exclude = [
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
   "class_g = 'Conky'",
+  "class_g = 'Microsoft Teams - Preview'",
+  "GDK_VISUALS@:c",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
