--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -10,5 +10,6 @@
             "filenamePattern": "*.ipynb"
         }
     ],
-    "git.confirmSync": false
+    "git.confirmSync": false,
+    "workbench.startupEditor": "newUntitledFile"
 }
