--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -21,7 +21,7 @@ corner-radius = 10;
 rounded-corners-exclude = [
   # "window_type = 'normal'",
   "class_g = 'rdesktop'",
-  "class_g = 'Google-chrome'",
+  # "class_g = 'Google-chrome'",
   "class_g = 'Mailspring'",
   "QTILE_INTERNAL@:c",
   "class_g = 'Bar'",
