Fix qtile bar rounded corners

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -23,14 +23,16 @@ rounded-corners-exclude = [
   "class_g = 'rdesktop'",
   # "class_g = 'Google-chrome'",
   "class_g = 'Mailspring'",
-  "QTILE_INTERNAL@:c",
+  # "QTILE_INTERNAL@:c",
+  # "! name~=''",
+  "QTILE_INTERNAL:32c = 1",
   "class_g = 'Bar'",
   "class_g = 'bar'",
   "class_g = 'Xephyr'",
   "window_type = 'dock'",
   "class_g = 'Microsoft Teams - Preview'"
 ];
-# # round-borders = 1;
+round-borders = 1;
 # # round-borders-exclude = [
 # #   # "class_g = 'Dunst'",
 # # ];
