Fix window borders

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -20,12 +20,12 @@ size-transition = true
 corner-radius = 10;
 rounded-corners-exclude = [
   # "window_type = 'normal'",
-  "class_g = 'rdesktop'",
-  # "class_g = 'Google-chrome'",
-  "class_g = 'Mailspring'",
   # "QTILE_INTERNAL@:c",
   # "! name~=''",
   "QTILE_INTERNAL:32c = 1",
+  # "class_g = 'Google-chrome'",
+  "class_g = 'rdesktop'",
+  "class_g = 'Mailspring'",
   "class_g = 'Bar'",
   "class_g = 'bar'",
   "class_g = 'Xephyr'",
@@ -278,6 +278,7 @@ blur: {
 # Exclude conditions for background blur.
 blur-background-exclude = [
   "window_type = 'desktop'",
+  # "window_type = 'dock'",
   #"class_g = 'URxvt'",
   #
   # prevents picom from blurring the background
@@ -301,7 +302,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-experimental-backends = true;
+# experimental-backends = true;
 backend = "glx";
 # backend = "xrender";
 
