--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,15 +1,22 @@
 {
-    "terminal.integrated.fontFamily": "'MesloLGSDZ Nerd Font'",
-    "terminal.integrated.fontSize": 16,
-    "git.enableSmartCommit": true,
-    "editor.fontFamily": "'MesloLGSDZ Nerd Font', 'Font Awesome 5 Free', 'Font Awesome 5 Brands', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "workbench.startupEditor": "newUntitledFile",
+    "editor.fontFamily": "'MesloLGSDZ Nerd Font', 'FontAwesome', 'Font Awesome 5 Free', 'v', 'Font Awesome 5 Brands', 'Droid Sans Mono', 'monospace', 'Droid Sans Fallback', 'mononki Nerd Font Mono'",
     "editor.fontSize": 16,
+    "python.showStartPage": false,
+    "terminal.integrated.fontFamily": "'MesloLGSDZ Nerd Font Mono'",
+    "terminal.external.linuxExec": "alacritty",
+    "git.confirmSync": false,
+    "terminal.integrated.fontSize": 20,
+    "docker.showStartPage": false,
     "workbench.editorAssociations": [
         {
             "viewType": "jupyter.notebook.ipynb",
             "filenamePattern": "*.ipynb"
         }
     ],
-    "git.confirmSync": false,
-    "workbench.startupEditor": "newUntitledFile"
+    "git.enableSmartCommit": true,
+    "go.toolsManagement.autoUpdate": true,
+    "workbench.iconTheme": "sweet-vscode-icons",
+    "workbench.colorTheme": "Sweet vscode",
+    "glassit-linux.opacity": 90
 }
