--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,6 @@
 # General
 backend = "glx"; # Huge increase in speed compared to the other backends.
-# experimental-backends = true;
+experimental-backends = true;
 glx-no-stencil = true; # Give as 15% performance boost, apparently.
 mark-wmwin-focused = true; # Attempt to detect WM windows (a non-override-redirect window with no child that has 'WM_STATE') and mark them as active.
 mark-ovredir-focused = false; # Mark override-redirect windows that don't have a child window with 'WM_STATE' focused.
@@ -37,6 +37,7 @@ blur-method = "dual_kawase";
 blur-strength = 8;
 focus-exclude             = [
     "class_g = 'dmenu'",
+    "class_g = 'spectacle'",
 	# "g:e:Galendae",
 	# "g:e:jgmenu"
     # "class_g = 'qutebrowser'",
