--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,20 +1,20 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-button-images=true
+gtk-font-name=Fira Sans 10
+gtk-theme-name=Sweet-Dark
+gtk-icon-theme-name=BeautyLine
 gtk-cursor-theme-name=Sweet-cursors
 gtk-cursor-theme-size=24
-gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-application-prefer-dark-theme=true
 gtk-decoration-layout=close,minimize,maximize:
 gtk-enable-animations=true
+gtk-primary-button-warps-slider=false
+gtk-button-images=true
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-enable-event-sounds=true
 gtk-enable-input-feedback-sounds=true
-gtk-font-name=Noto Sans 12
-gtk-icon-theme-name=BeautyLine
 gtk-menu-images=true
 gtk-modules=colorreload-gtk-module
-gtk-primary-button-warps-slider=false
-gtk-theme-name=Sweet-Dark
 gtk-toolbar-style=3
 gtk-xft-antialias=1
 gtk-xft-hinting=1
