--- a/.config/lxsession/qtile/desktop.conf
+++ b/.config/lxsession/qtile/desktop.conf
@@ -1,6 +1,6 @@
 [GTK]
 sNet/ThemeName=Sweet-Dark
-sGtk/FontName=Noto Sans 12
+sGtk/FontName=Fira Sans 12
 sGtk/ColorScheme=
 sNet/IconThemeName=BeautyLine
 sGtk/CursorThemeName=Sweet-cursors
