--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -38,6 +38,8 @@ blur-strength = 8;
 focus-exclude             = [
     "class_g = 'dmenu'",
     "class_g = 'spectacle'",
+    "class_g = 'mpv'",
+    "class_g = 'vlc'",
 	# "g:e:Galendae",
 	# "g:e:jgmenu"
     # "class_g = 'qutebrowser'",
