Exclude round border xmobar

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,6 +11,8 @@ corner-radius = 10;
 rounded-corners-exclude = [
     "QTILE_INTERNAL:32c = 1",
     "class_g = 'rdesktop'",
+    "g:e:xmobar",
+    "g:e:panel",
     "g:e:dmenu"
 ];
 
