--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -11,8 +11,8 @@ corner-radius = 10;
 rounded-corners-exclude = [
     "QTILE_INTERNAL:32c = 1",
     "class_g = 'rdesktop'",
-    "g:e:xmobar",
-    "g:e:panel",
+    "window_type = 'dock'",
+    "g:e:trayer",
     "g:e:dmenu"
 ];
 
@@ -30,7 +30,7 @@ fade-exclude = [
 # Opacity
 active-opacity            = 1.0;
 frame-opacity             = 1.0;
-inactive-opacity          = 0.8;
+inactive-opacity          = 0.9;
 inactive-opacity-override = true;
 blur-background           = true;
 blur-background-frame     = false;
@@ -60,5 +60,6 @@ shadow-offset-x = -15;
 shadow-offset-y = -10;
 shadow-opacity = 0.5;
 shadow-exclude = [
-	"g:e:dmenu"
-];
+	"g:e:dmenu",
+	"g:e:trayer"
+]
