--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,8 +10,8 @@ vsync = true
 corner-radius = 10;
 rounded-corners-exclude = [
     "QTILE_INTERNAL:32c = 1",
-    "class_g = 'rdesktop'",
     "window_type = 'dock'",
+    "class_g = 'rdesktop'",
     "g:e:trayer",
     "g:e:dmenu"
 ];
@@ -39,6 +39,8 @@ blur-method = "dual_kawase";
 blur-strength = 8;
 focus-exclude             = [
     "class_g = 'dmenu'",
+    "QTILE_INTERNAL:32c = 1",
+    "window_type = 'dock'",
     "class_g = 'spectacle'",
     "class_g = 'mpv'",
     "class_g = 'vlc'",
@@ -48,10 +50,10 @@ focus-exclude             = [
     # "class_g = 'Brave-browser'",
     # "class_g = 'mpv'"
 ];
-blur-background-exclude   = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
-];
+# blur-background-exclude   = [
+#     "window_type = 'dock'",
+#     "window_type = 'desktop'"
+# ];
 
 # Shadows
 shadow = true;
@@ -63,3 +65,12 @@ shadow-exclude = [
 	"g:e:dmenu",
 	"g:e:trayer"
 ]
+wintypes:
+{
+  normal = { fade = true; shadow = true; }
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = true; opacity = 0.75; focus = false; blur = true; blur-strength = 8; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
+};
