--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,6 @@
 # General
 backend = "glx"; # Huge increase in speed compared to the other backends.
-experimental-backends = true;
+# experimental-backends = true;
 glx-no-stencil = true; # Give as 15% performance boost, apparently.
 mark-wmwin-focused = true; # Attempt to detect WM windows (a non-override-redirect window with no child that has 'WM_STATE') and mark them as active.
 mark-ovredir-focused = false; # Mark override-redirect windows that don't have a child window with 'WM_STATE' focused.
@@ -18,9 +18,9 @@ rounded-corners-exclude = [
 
 # Fading
 fading          = true;
-fade-delta      = 7;
+fade-delta      = 8;
 fade-in-step    = 0.02;
-fade-out-step   = 0.02;
+fade-out-step   = 0.08;
 fade-exclude = [
 	"g:e:dmenu",
 	"g:e:Galendae",
