--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,6 @@
 # General
 backend = "glx"; # Huge increase in speed compared to the other backends.
-# experimental-backends = true;
+experimental-backends = true;
 glx-no-stencil = true; # Give as 15% performance boost, apparently.
 mark-wmwin-focused = true; # Attempt to detect WM windows (a non-override-redirect window with no child that has 'WM_STATE') and mark them as active.
 mark-ovredir-focused = false; # Mark override-redirect windows that don't have a child window with 'WM_STATE' focused.
@@ -11,6 +11,7 @@ corner-radius = 10;
 rounded-corners-exclude = [
     "QTILE_INTERNAL:32c = 1",
     "window_type = 'dock'",
+    "window_type = 'panel'",
     "class_g = 'rdesktop'",
     "g:e:trayer",
     "g:e:dmenu"
@@ -24,10 +25,11 @@ fade-out-step   = 0.08;
 fade-exclude = [
 	"g:e:dmenu",
 	"g:e:Galendae",
-	"g:e:jgmenu"
+	# "g:e:jgmenu"
 ];
 
 # Opacity
+pseudo-transparency       = true
 active-opacity            = 1.0;
 frame-opacity             = 1.0;
 inactive-opacity          = 0.9;
@@ -41,6 +43,7 @@ focus-exclude             = [
     "class_g = 'dmenu'",
     "QTILE_INTERNAL:32c = 1",
     "window_type = 'dock'",
+    "window_type = 'panel'",
     "class_g = 'spectacle'",
     "class_g = 'mpv'",
     "class_g = 'vlc'",
@@ -69,7 +72,8 @@ wintypes:
 {
   normal = { fade = true; shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = true; opacity = 0.75; focus = false; blur = true; blur-strength = 8; }
+  dock = { shadow = true; blur = true; opacity = 0.68; focus = false; }
+  panel = { shadow = true; blur = true; opacity = 0.68; focus = false; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
