--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -23,7 +23,7 @@ fade-delta      = 8;
 fade-in-step    = 0.02;
 fade-out-step   = 0.08;
 fade-exclude = [
-	"g:e:dmenu",
+	# "g:e:dmenu",
 	"g:e:Galendae",
 	# "g:e:jgmenu"
 ];
@@ -38,7 +38,7 @@ blur-background           = true;
 blur-background-frame     = false;
 blur-background-fixed     = false;
 blur-method = "dual_kawase";
-blur-strength = 8;
+blur-strength = 18;
 focus-exclude             = [
     "class_g = 'dmenu'",
     "QTILE_INTERNAL:32c = 1",
