--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -47,6 +47,7 @@ focus-exclude             = [
     "class_g = 'spectacle'",
     "class_g = 'mpv'",
     "class_g = 'vlc'",
+    # "class_g = 'Rofi'",
 	# "g:e:Galendae",
 	# "g:e:jgmenu"
     # "class_g = 'qutebrowser'",
@@ -60,12 +61,12 @@ focus-exclude             = [
 
 # Shadows
 shadow = true;
-shadow-radius = 20;
-shadow-offset-x = -15;
-shadow-offset-y = -10;
+shadow-radius = 30;
+# shadow-offset-x = -10;
+# shadow-offset-y = -10;
 shadow-opacity = 0.5;
 shadow-exclude = [
-	"g:e:dmenu",
+	# "g:e:dmenu",
 	"g:e:trayer"
 ]
 wintypes:
