--- a/.config/galendae/galendae.conf
+++ b/.config/galendae/galendae.conf
@@ -13,14 +13,14 @@ close_on_unfocus=1
 # Initial window position: 'center', 'mouse' or 'none'
 position=none
 # Move the window horizontally from its intial position
-x_offset=3070
+x_offset=3100
 # Move the window vertically from its initial position
 y_offset=38
 
 ### COLORS
 
 # Window background specified with CSS color
-background_color=#2F343F
+background_color=#0d0d0d56
 # Text color specified with CSS color
 foreground_color=#ffffff
 # Dates of previous and following months, colored with CSS
