--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -62,9 +62,10 @@ focus-exclude             = [
 # Shadows
 shadow = true;
 shadow-radius = 30;
-# shadow-offset-x = -10;
-# shadow-offset-y = -10;
-shadow-opacity = 0.5;
+shadow-red = 0;
+shadow-offset-x = -15;
+shadow-offset-y = -10;
+shadow-opacity = 0.8;
 shadow-exclude = [
 	# "g:e:dmenu",
 	"g:e:trayer"
