--- a/.config/autostart/xdman.desktop
+++ b/.config/autostart/xdman.desktop
@@ -1,10 +1,11 @@
 [Desktop Entry]
 Encoding=UTF-8
 Version=1.0
-Type=Application
-Terminal=false
-Exec="/usr/lib/jvm/java-15-openjdk/bin/java" -Xmx1024m -jar "/opt/xdman/xdman.jar" -m
-Name=Xtreme Download Manager
-Comment=Xtreme Download Manager
 Categories=Network;
+Comment=Xtreme Download Manager
+Exec=java -Xmx1024m -jar "/opt/xdman/xdman.jar" -m
 Icon=/opt/xdman/icon.png
+Name=Xtreme Download Manager
+Terminal=false
+TryExec=java
+Type=Application
