--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -5,17 +5,11 @@ gtk-cursor-theme-name=Sweet-cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=close,minimize,maximize:
 gtk-enable-animations=true
-gtk-enable-event-sounds=true
-gtk-enable-input-feedback-sounds=true
 gtk-font-name=Fira Sans,  10
 gtk-icon-theme-name=BeautyLine
 gtk-menu-images=true
-gtk-modules=colorreload-gtk-module
+gtk-modules=colorreload-gtk-module:appmenu-gtk-module
 gtk-primary-button-warps-slider=false
+gtk-shell-shows-menubar=1
 gtk-theme-name=Sweet-Dark
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=3
-gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=rgb
