--- a/.config/copyq/copyq-commands.ini
+++ b/.config/copyq/copyq-commands.ini
@@ -35,8 +35,12 @@
 7\Input=application/x-copyq-tags
 7\Name=Quitar todas las marcas
 8\Command=copyq: menu()
-8\GlobalShortcut=alt+a
 8\Icon=\xf01c
 8\IsGlobalShortcut=true
 8\Name=Mostrar el men\xfa de la bandeja
-size=8
+9\Command=copyq: toggle()
+9\GlobalShortcut=alt+a
+9\Icon=\xf022
+9\IsGlobalShortcut=true
+9\Name=Mostrar/ocultar la ventana principal
+size=9
