--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -70,6 +70,18 @@ shadow-exclude = [
 	# "g:e:dmenu",
 	"g:e:trayer"
 ]
+
+# opacity-rule = [
+#   "85:class_g     = 'Lxpolkit'",
+#   "80:class_g     = 'Galendae'",
+#   "80:class_g     = 'jgmenu'",
+#   "70:class_g     = 'Shutdown-dialog'"
+# ];
+
+transition-exclude = [
+  "class_g = 'eww-*'"
+]
+
 wintypes:
 {
   normal = { fade = true; shadow = true; }
