--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,15 +1,22 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
-gtk-button-images=true
+gtk-button-images=1
 gtk-cursor-theme-name=Sweet-cursors
 gtk-cursor-theme-size=24
 gtk-decoration-layout=close,minimize,maximize:
 gtk-enable-animations=true
-gtk-font-name=Fira Sans,  10
+gtk-font-name=Fira Sans 10
 gtk-icon-theme-name=BeautyLine
-gtk-menu-images=true
-gtk-modules=colorreload-gtk-module:appmenu-gtk-module
+gtk-menu-images=1
+gtk-modules=\sappmenu-gtk-module 
 gtk-primary-button-warps-slider=false
 gtk-shell-shows-menubar=1
 gtk-theme-name=Sweet-Dark
-gtk-toolbar-style=3
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=rgb
