--- a/.config/lxsession-default-apps/settings.conf
+++ b/.config/lxsession-default-apps/settings.conf
@@ -21,25 +21,25 @@ bittorent/available=
 document/available=
 burn/available=
 tasks/available=
-webbrowser/installed=Google Chrome,/usr/bin/google-chrome-stable,google-chrome,/usr/share/applications/google-chrome.desktop,;
+webbrowser/installed=Microsoft Edge (dev),/usr/bin/microsoft-edge-dev,microsoft-edge-dev,/usr/share/applications/microsoft-edge-dev.desktop,;Google Chrome,/usr/bin/google-chrome-stable,google-chrome,/usr/share/applications/google-chrome.desktop,;
 email/installed=
 file_manager/installed=Gestor de archivos Thunar,thunar,org.xfce.thunar,/usr/share/applications/thunar.desktop,;
 screensaver/installed=
 composite_manager/installed=
-desktop_manager/installed=Personalizar apariencia y comportamiento,lxappearance,preferences-desktop-theme,/usr/share/applications/lxappearance.desktop,;Configuración de la sesión de escritorio,lxsession-edit,preferences-desktop,/usr/share/applications/lxsession-edit.desktop,;Aplicaciones predeterminadas para LXSession,lxsession-default-apps,preferences-desktop,/usr/share/applications/lxsession-default-apps.desktop,;Configuración del gestor de archivos,thunar-settings,org.xfce.thunar,/usr/share/applications/thunar-settings.desktop,;
+desktop_manager/installed=Personalizar apariencia y comportamiento,lxappearance,preferences-desktop-theme,/usr/share/applications/lxappearance.desktop,;Configuración de la sesión de escritorio,lxsession-edit,preferences-desktop,/usr/share/applications/lxsession-edit.desktop,;Aplicaciones predeterminadas para LXSession,lxsession-default-apps,preferences-desktop,/usr/share/applications/lxsession-default-apps.desktop,;Configuración del gestor de archivos,thunar-settings,org.xfce.thunar,/usr/share/applications/thunar-settings.desktop,;Kvantum Manager,kvantummanager,kvantum,/usr/share/applications/kvantummanager.desktop,;
 power_manager/installed=
 polkit/installed=
 im/installed=
 widget/installed=
 terminal_manager/installed=XTerm,xterm,xterm-color_48x48,/usr/share/applications/xterm.desktop,;UXTerm,uxterm,xterm-color_48x48,/usr/share/applications/uxterm.desktop,;Alacritty,alacritty,Alacritty,/usr/share/applications/Alacritty.desktop,;
-audio_player/installed=Volume Icon,volumeicon,multimedia-volume-control,/usr/share/applications/volumeicon.desktop,;mpv Media Player,mpv,mpv,/usr/share/applications/mpv.desktop,;Qt V4L2 video capture utility,qvidcap,qvidcap,/usr/share/applications/qvidcap.desktop,;Qt V4L2 test Utility,qv4l2,qv4l2,/usr/share/applications/qv4l2.desktop,;
-video_player/installed=Volume Icon,volumeicon,multimedia-volume-control,/usr/share/applications/volumeicon.desktop,;mpv Media Player,mpv,mpv,/usr/share/applications/mpv.desktop,;Qt V4L2 video capture utility,qvidcap,qvidcap,/usr/share/applications/qvidcap.desktop,;Qt V4L2 test Utility,qv4l2,qv4l2,/usr/share/applications/qv4l2.desktop,;
-pdf_reader/installed=Feh,feh,feh,/usr/share/applications/feh.desktop,;
-image_display/installed=Feh,feh,feh,/usr/share/applications/feh.desktop,;
-text_editor/installed=Vim,vim,gvim,/usr/share/applications/vim.desktop,;Visual Studio Code - URL Handler,/opt/visual-studio-code/code,visual-studio-code,/usr/share/applications/visual-studio-code-url-handler.desktop,;Visual Studio Code,/opt/visual-studio-code/code,visual-studio-code,/usr/share/applications/visual-studio-code.desktop,;
-archive/installed=
+audio_player/installed=Volume Icon,volumeicon,multimedia-volume-control,/usr/share/applications/volumeicon.desktop,;mpv Media Player,mpv,mpv,/usr/share/applications/mpv.desktop,;Qt V4L2 video capture utility,qvidcap,qvidcap,/usr/share/applications/qvidcap.desktop,;Qt V4L2 test Utility,qv4l2,qv4l2,/usr/share/applications/qv4l2.desktop,;OBS Studio,obs,com.obsproject.Studio,/usr/share/applications/com.obsproject.Studio.desktop,;Spotify,spotify,spotify-client,/usr/share/applications/spotify.desktop,;Control de Volumen de PulseAudio,pavucontrol,multimedia-volume-control,/usr/share/applications/pavucontrol.desktop,;
+video_player/installed=Volume Icon,volumeicon,multimedia-volume-control,/usr/share/applications/volumeicon.desktop,;mpv Media Player,mpv,mpv,/usr/share/applications/mpv.desktop,;Qt V4L2 video capture utility,qvidcap,qvidcap,/usr/share/applications/qvidcap.desktop,;Qt V4L2 test Utility,qv4l2,qv4l2,/usr/share/applications/qv4l2.desktop,;OBS Studio,obs,com.obsproject.Studio,/usr/share/applications/com.obsproject.Studio.desktop,;Spotify,spotify,spotify-client,/usr/share/applications/spotify.desktop,;Control de Volumen de PulseAudio,pavucontrol,multimedia-volume-control,/usr/share/applications/pavucontrol.desktop,;
+pdf_reader/installed=Feh,feh,feh,/usr/share/applications/feh.desktop,;Zathura,zathura,org.pwmt.zathura,/usr/share/applications/org.pwmt.zathura.desktop,;
+image_display/installed=Feh,feh,feh,/usr/share/applications/feh.desktop,;Zathura,zathura,org.pwmt.zathura,/usr/share/applications/org.pwmt.zathura.desktop,;
+text_editor/installed=Visual Studio Code,/opt/visual-studio-code/code,visual-studio-code,/usr/share/applications/visual-studio-code.desktop,;Visual Studio Code - URL Handler,/opt/visual-studio-code/code,visual-studio-code,/usr/share/applications/visual-studio-code-url-handler.desktop,;Neovide (nvim),neovide,nvim,/usr/share/applications/neovide.desktop,;Neovim,nvim,nvim,/usr/share/applications/nvim.desktop,;
+archive/installed=Gestor de archivadores,file-roller,org.gnome.ArchiveManager,/usr/share/applications/org.gnome.FileRoller.desktop,;
 spreadsheet/installed=
 bittorent/installed=
 document/installed=
 burn/installed=
-tasks/installed=Gestor de tareas,lxtask,utilities-system-monitor,/usr/share/applications/lxtask.desktop,;Htop,htop,htop,/usr/share/applications/htop.desktop,;
+tasks/installed=SysMonTask,sysmontask,/usr/share/sysmontask/icons/SysMonTask.png,/usr/share/applications/SysMonTask.desktop,;
