--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -39,5 +39,6 @@
     "window.zoomLevel": 1,
     "diffEditor.ignoreTrimWhitespace": false,
     "rufo.exe": "/home/alejandro.garuda/.gem/ruby/3.0.0/bin/rufo",
-    "vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim"
+    "vscode-neovim.neovimExecutablePaths.linux": "/usr/bin/nvim",
+    "security.workspace.trust.untrustedFiles": "open"
 }
