--- a/.config/copyq/copyq-commands.ini
+++ b/.config/copyq/copyq-commands.ini
@@ -35,6 +35,7 @@
 7\Input=application/x-copyq-tags
 7\Name=Quitar todas las marcas
 8\Command=copyq: menu()
+8\GlobalShortcut=alt+s
 8\Icon=\xf01c
 8\IsGlobalShortcut=true
 8\Name=Mostrar el men\xfa de la bandeja
