--- a/.config/lxsession/xmonad/desktop.conf
+++ b/.config/lxsession/xmonad/desktop.conf
@@ -1,7 +1,7 @@
 [GTK]
 sNet/ThemeName=Sweet-Dark
 sGtk/FontName=Fira Sans 10
-sGtk/ColorScheme=panel_bg_color:#181b28\nfg_color:#C3C7D1\nselected_bg_color:#c50ed2\nunfocused_wm_color:#31363d\ndark_fg_color:#C3C7D1\npanel_fg_color:#ffffff\nwm_color:#31363d\ndark_base_color:#181b28\nsidebar_fg:#98abb2\nselected_fg_color:#fefefe\ntooltip_bg_color:#000000\ndark_text_color:#C3C7D1\nbg_color:#161925\nsidebar_bg:#161925\nbase_color:#181b28\ndark_bg_color:#0c0e14\ntooltip_fg_color:#ffffff\ntext_color:#C3C7D1\n
+sGtk/ColorScheme=
 sNet/IconThemeName=BeautyLine
 sGtk/CursorThemeName=Sweet-cursors
 iGtk/CursorThemeSize=24
