--- a/.config/autostart/mailspring.desktop
+++ b/.config/autostart/mailspring.desktop
@@ -10,3 +10,4 @@ StartupWMClass=Mailspring
 Categories=GNOME;GTK;Network;Email;
 Keywords=email;internet;
 MimeType=x-scheme-handler/mailto;x-scheme-handler/mailspring;
+NotShowIn=xmonad;
