--- a/.config/copyq/copyq.conf
+++ b/.config/copyq/copyq.conf
@@ -142,9 +142,9 @@ toggle_clipboard_storing=
 size=1
 
 [Theme]
-alt_bg=#383838
+alt_bg=#181B28
 alt_item_css=
-bg=#4b4b4b
+bg=#161925
 css=
 css_template_items=items
 css_template_main_window=main_window
@@ -153,15 +153,15 @@ css_template_tooltip=tooltip
 cur_item_css="\n    ;border: 0.1em solid ${sel_bg}"
 edit_bg=#ffffff
 edit_fg=#1a1a1a
-edit_font="Ubuntu Condensed,11,-1,5,50,0,0,0,0,0"
+edit_font="MesloLGSDZ Nerd Font,11,-1,5,50,0,0,0,0,0"
 fg=#dfdfdf
-find_bg=#00689c
+find_bg=#C50ED2
 find_fg=#ffffff
-find_font="Ubuntu Condensed,10,-1,5,50,0,0,0,0,0"
-font="Ubuntu Condensed,10,-1,5,50,0,0,0,0,0"
+find_font="MesloLGSDZ Nerd Font,10,-1,5,50,0,0,0,0,0"
+font="MesloLGSDZ Nerd Font,10,-1,5,50,0,0,0,0,0"
 font_antialiasing=true
 hover_item_css=
-icon_size=17
+icon_size=16
 item_css=
 item_spacing=
 menu_bar_css="\n    ;background: ${bg}\n    ;color: ${fg}"
@@ -171,7 +171,7 @@ menu_css="\n    ;border: 1px solid ${sel_bg}\n    ;background: ${bg}\n    ;color
 notes_bg=#ffffff
 notes_css=
 notes_fg=#232323
-notes_font="Ubuntu Condensed,11,-1,5,50,0,0,0,0,0"
+notes_font="MesloLGSDZ Nerd Font,11,-1,5,50,0,0,0,0,0"
 notification_bg=#333
 notification_fg=#ddd
 notification_font=
@@ -179,12 +179,12 @@ num_fg=#7f7f7f
 num_font="Ubuntu,7,-1,5,25,0,0,0,0,0"
 search_bar="\n    ;background: ${edit_bg}\n    ;color: ${edit_fg}\n    ;border: 1px solid ${alt_bg}\n    ;margin: 2px"
 search_bar_focused="\n    ;border: 1px solid ${sel_bg}"
-sel_bg=#61819c
+sel_bg=#C50ED2
 sel_fg=#ffffff
 sel_item_css=
 show_number=true
 show_scrollbars=true
-style_main_window=true
+style_main_window=false
 tab_bar_css="\n    ;background: ${bg - #222}"
 tab_bar_item_counter="\n    ;color: ${fg - #044 + #400}\n    ;font-size: 6pt"
 tab_bar_scroll_buttons_css="\n    ;background: ${bg - #222}\n    ;color: ${fg}\n    ;border: 0"
