--- a/.config/spotifyd/spotifyd.conf.sample
+++ b/.config/spotifyd/spotifyd.conf.sample
@@ -1,12 +1,13 @@
 [global]
 username = "<username>"
-password = "<pass>"
+# password = "<pass>"
+password_cmd = "echo ${_SPOTY_PASS}"
 backend = "pulseaudio"
 use_mpris = true
-#device = "default"
+# device = "default"
 mixer = "PCM"
-#volume-controller = "alsa" # or alsa_linear, or softvol
-#onevent = command_run_on_playback_event
+# volume-controller = "alsa" # or alsa_linear, or softvol
+# onevent = command_run_on_playback_event
 device_name = "SPT"
 device_type = "computer"
 bitrate = 320
